1.2.2b6:
    Core:
    * FIX: setup: detect check_icmp also on 64-Bit CentOS
           (thanks to あきら) 

    Checks & Agents:
    * FIX: apc_symmetra_power: resurrect garble PNP template for 
    * FIX: check_mk_agent.freebsd: remove garble from output
           (Thanks to Mathias Decker)
    * FIX: check_mk-mssql_counters.locks: fix computation, was altogether wrong
    * FIX: check_mk-mssql_counters.transactions: fix computation also
    * check_http: now support the option -L (urlizing the result)

    Multisite:
    * FIX: fix localization in non-OMD environment
           (thanks to あきら)
    * FIX: hopefully fix computation of Speed-O-Meter
    * Add $SERVICEOUTPUT$ and $HOSTOUTPUT$ to allowed macros for
      custom notes

    Notifications:
    * FIX: fix event type for recoveries
    * FIX: fix custom notifications on older nagios versions
    * FIX: handle case where type HOST/SERVICE not correctly detected
    
    Livestatus:
    * FIX: memory leak when removing downtime / comment 

1.2.2b5:
    Core:
    * Checks can now omit the typical "OK - " or "WARN -". This text
      will be added automatically if missing.
    * FIX: livecheck: fixed compilation bug
    * FIX: avoid simultanous activation of changes by means of a lock
    * FIX: check_mk: convert service description unicode into utf-8
    
    Checks & Agents:
    * FIX: jolokia_metrics.mem - now able to handle negative/missing max values
    * ADD: tcp_conn_stats: now additionally uses /proc/net/tcp6
    * ADD: wmic_processs: cpucores now being considered when calculating 
           user/kernel percentages. (thanks to William Baum)
    * FIX: UPS checks support Eaton Evolution
    * FIX: windows agent plugin: mssql now exits after 10 seconds
    
    Notifications:
    * FIX: fixed crash on host notification when contact had explicit services set

    Livestatus:
    * FIX: possible crash with VERY long downtime comments
    * FIX: now able to handle equal comment id of host and service
