@@ -2,6 +2,7 @@
     Core:
     * FIX: setup: detect check_icmp also on 64-Bit CentOS
            (thanks to あきら) 
+    * FIX: setup.sh: create auth.serials, fix permissions of htpasswd
 
     Checks & Agents:
     * FIX: apc_symmetra_power: resurrect garble PNP template for 
